# claude-session-visualizer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SDK_MIGRATION_PHASE2.md  SDK_MIGRATION_PLAN.md  SDK_Migration_Demo.pptx  package-lock.json  package.json  playwright.config.js  pyproject.toml  vitest.config.js
.github/workflows/: ci.yml
docs/: git-integration-implementation.md
slides/: build-deck.cjs  package-lock.json  package.json  slide1.html  slide2.html  slide3.html  slide4.html  slide5.html  slide6.html  slide7.html
src/api/: analytics.py  config.py  git_tracker.py  logging_config.py  process_manager.py  remote_agent.py  sdk_session_manager.py  server.py  session_detector.py  stream_process_manager.py  tunnel_manager.py  types.py  utils.py  websocket.py  ws_test_client.py
src/api/detection/: __init__.py  activity.py  jsonl_parser.py  matcher.py  processes.py
src/api/routes/: __init__.py  analytics.py  machines.py  processes.py  sessions.py  sharing.py  skills.py  stream_processes.py  templates.py
src/api/scripts/: backfill_summaries.py
src/frontend/: app.js  icons.js  index.html  shared.html  styles.css
tests/: __init__.py  test_activity.py  test_analytics.py  test_config.py  test_git_tracker.py  test_jsonl_parser.py  test_matcher.py  test_process_management.py  test_processes.py  test_routes_analytics.py  test_routes_machines.py  test_routes_sessions.py  test_routes_sharing.py  test_routes_templates.py  test_session_detector.py  test_summary.py  test_tunnel_manager.py  test_utils.py  test_websocket.py
visualizer/.beads/: issues.jsonl
(+23 files in other folders)
