[project]
name = "claude-session-visualizer"
version = "0.1.0"
description = "Web dashboard showing running Claude Code sessions"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "anthropic>=0.40.0",
    "requests>=2.32.5",
    "python-dotenv>=1.0.0",
    "claude-agent-sdk>=0.1.22",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", "daemon", "logs"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = ["E501"]  # Line length handled by formatter

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
exclude = [".venv", "daemon", "logs"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
